# cmake_tests

./: .gitignore  README.md
step1_minimal/: CMakeLists.txt  main.cpp
step2_include_boost/: CMakeLists.txt  main.cpp
step2_include_boost/test/data/: data_1.json
step3_link_boost_command_line_options/: CMakeLists.txt  main.cpp
step4_build_static_lib/: CMakeLists.txt  mylib.cpp  mylib.h
step5_use_static_lib/: CMakeLists.txt  main.cpp
step6_defs_inc_vars_cpp17/: CMakeLists.txt  logs.h  test1.cpp  test2.cpp
step7_boost_logs/: CMakeLists.txt  main.cpp
